--- a/i3blocks/config
+++ b/i3blocks/config
@@ -3,7 +3,7 @@ full_text=
 
 [left_ws]
 full_text=     +    
-command=morc_menu &
+command=i3-msg -q "exec --no-startup-id morc_menu"
 
 [new_ws]
 full_text=     ⇄    
