Update touch menu to single panel, repo dir structure reflects filesystem, added missing scripts

--- a/.config/xfce4/panel/launcher-2/15785403391.desktop
+++ b/.config/xfce4/panel/launcher-2/15785403391.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Workspace 6
+Name=Suspend
 Comment=
-Exec=i3-msg -q workspace 6
-Icon=
+Exec=i3exit suspend
+Icon=system-suspend
 Path=
 Terminal=false
 StartupNotify=false
