--- a/.config/xfce4/panel/launcher-40/15860285374.desktop
+++ b/.config/xfce4/panel/launcher-40/15860285374.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Workspace 1
+Name=prev ws   >
 Comment=
-Exec=i3-msg workspace 1
+Exec=i3-msg workspace next
 Icon=
 Path=
 Terminal=false
