--- a/.config/xfce4/panel/launcher-5/15785405153.desktop
+++ b/.config/xfce4/panel/launcher-5/15785405153.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Workspace 2
+Name=Shut down
 Comment=
-Exec=i3-msg -q workspace 2
-Icon=
+Exec=i3exit shutdown
+Icon=system-shutdown
 Path=
 Terminal=false
 StartupNotify=false
