Use a script for move to next/prev workspace

--- a/.config/xfce4/panel/launcher-39/15860282531.desktop
+++ b/.config/xfce4/panel/launcher-39/15860282531.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=<   prev ws
 Comment=
-Exec=i3-msg workspace prev
+Exec=/home/hoagie/.i3/go_to_workspace.py prev
 Icon=
 Path=
 Terminal=false
