--- a/.config/xfce4/panel/launcher-9/15872155352.desktop
+++ b/.config/xfce4/panel/launcher-9/15872155352.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=move to own
+Name=move up
 Comment=
-Exec=/home/hoagie/.i3/move_to_first_available_workspace.py
+Exec=i3-msg -q move up
 Icon=
 Path=
 Terminal=false
