Toggle floating in touch panel

--- a/.config/xfce4/panel/launcher-9/15872170411.desktop
+++ b/.config/xfce4/panel/launcher-9/15872170411.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=window
+Name=toggle floating
 Comment=
-Exec=i3-msg -q
+Exec=i3-msg -q floating toggle
 Icon=
 Path=
 Terminal=false
