--- a/.config/xfce4/panel/launcher-34/15784633282.desktop
+++ b/.config/xfce4/panel/launcher-34/15784633282.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Brightness DOWN
 Comment=
 Exec=xdotool key XF86MonBrightnessDown
-Icon=palemoon
+Icon=/home/hoagie/.i3/feather_icons/sun_gray.svg
 Path=
 Terminal=false
 StartupNotify=false
