--- a/.config/xfce4/panel/launcher-39/15860282531.desktop
+++ b/.config/xfce4/panel/launcher-39/15860282531.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=<   prev ws
 Comment=
 Exec=/home/hoagie/.i3/go_to_workspace.py prev
-Icon=
+Icon=/home/hoagie/.i3/feather_icons/arrow-left.svg
 Path=
 Terminal=false
 StartupNotify=false
