--- a/.config/xfce4/panel/launcher-4/15782065582.desktop
+++ b/.config/xfce4/panel/launcher-4/15782065582.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Close panel
 Comment=
 Exec=killall xfce4-panel
-Icon=preferences-system-network-server-installation
+Icon=/home/hoagie/.i3/feather_icons/chevrons-down.svg
 Path=
 Terminal=true
 StartupNotify=false
