--- a/.config/xfce4/panel/launcher-19/157846273816.desktop
+++ b/.config/xfce4/panel/launcher-19/157846273816.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Volume DOWN
 Comment=
 Exec=xdotool key XF86AudioLowerVolume
-Icon=audio-volume-low
+Icon=/home/hoagie/.i3/feather_icons/volume-1.svg
 Path=
 Terminal=false
 StartupNotify=false
