--- a/.config/xfce4/panel/launcher-40/15860285374.desktop
+++ b/.config/xfce4/panel/launcher-40/15860285374.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=next ws   >
 Comment=
 Exec=/home/hoagie/.i3/go_to_workspace.py next
-Icon=
+Icon=/home/hoagie/.i3/feather_icons/arrow-right.svg
 Path=
 Terminal=false
 StartupNotify=false
