--- a/.config/xfce4/panel/launcher-9/15872159146.desktop
+++ b/.config/xfce4/panel/launcher-9/15872159146.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=window
 Comment=
 Exec=i3-msg -q
-Icon=
+Icon=/home/hoagie/.i3/feather_icons/more-vertical.svg
 Path=
 Terminal=false
 StartupNotify=false
