--- a/.config/xfce4/panel/launcher-5/15785405153.desktop
+++ b/.config/xfce4/panel/launcher-5/15785405153.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Shut down
 Comment=
 Exec=i3exit shutdown
-Icon=system-shutdown
+Icon=/home/hoagie/.i3/feather_icons/power.svg
 Path=
 Terminal=false
 StartupNotify=false
