--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -18,30 +18,24 @@ order += "cpu_usage"
 order += "memory"
 order += "disk /"
 order += "wireless _first_"
-order += "ethernet _first_"
 order += "battery all"
 order += "tztime local"
 
 cpu_usage {
-        format = " cpu  %usage "
+        format = "cpu  %usage"
 }
 
 disk "/" {
-        format = " dsk %avail "
-}
-
-ethernet _first_ {
-        format_up = " lan: %ip "
-        format_down = " no lan "
+        format = "dsk %avail"
 }
 
 wireless _first_ {
-        format_up = " wifi%quality %essid "
-        format_down = "down wifi"
+        format_up = "wifi%quality %essid"
+        format_down = "wifi down"
 }
 
 battery all {
-        format = " %percentage bat (%remaining)%status "
+        format = " bat %percentage (%remaining)%status "
         format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
@@ -54,11 +48,11 @@ battery all {
 }
 
 memory {
-        format = " ram %used "
+        format = "ram %used"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = " %d-%m %H:%M "
+        format = "%d-%m %H:%M"
 }
