i3 colors based in solo-jazz-theme

--- a/.i3/config
+++ b/.i3/config
@@ -340,17 +340,18 @@ bar {
         # font xft:URWGothic-Book 11
 	strip_workspace_numbers yes
 
-    colors {
-        background #222D31
-        statusline #F9FAF9
+     colors {
+
+        background #eaeafa
+        statusline #3b2685
         separator  #636966
 
 #                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
-        active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #222D31 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+        focused_workspace  #009c9f #009c9f #fafafa
+        active_workspace   #3b2685 #eaeafa #3b2685
+        inactive_workspace #3b2685 #fafafa #3b2685
+        binding_mode       ##009c9f #009c9f #fafafa
+        urgent_workspace   #16a085 #fafafa #E5201D
     }
 }
 
@@ -359,9 +360,9 @@ bindsym $mod+m bar mode toggle
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
+  client.focused          #005cc5 #fafafa #009c9f #FDF6E3 #778ca3
+  client.focused_inactive #778ca3 #fafafa #bbc5d1 #454948
+  client.unfocused        #778ca3 #fafafa #bbc5d1 #454948 
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
