--- a/.i3/config
+++ b/.i3/config
@@ -14,11 +14,6 @@ new_float normal
 # Hide borders
 hide_edge_borders none
 
-# change borders
-bindsym $mod+u border none
-bindsym $mod+y border pixel 2
-bindsym $mod+n border normal
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font xft:URWGothic-Book 11
@@ -50,8 +45,8 @@ bindsym $mod+z exec --no-startup-id morc_menu
 ## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
 ################################################################################################
 
-#exec --no-startup-id volumeicon
-#bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
+##exec --no-startup-id volumeicon
+##bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 exec --no-startup-id start-pulseaudio-x11
 exec --no-startup-id pa-applet --disable-key-grabbing
 bindsym $mod+Ctrl+m exec pavucontrol
@@ -73,7 +68,7 @@ bindsym XF86MonBrightnessDown exec "/home/hoagie/.i3/brightness.py dec"
 bindsym $mod+b exec terminal -e 'bmenu'
 bindsym $mod+F2 exec firefox
 # bindsym $mod+F3 exec pcmanfm
-bindsym $mod+F3 exec io.elementary.files
+bindsym $mod+F3 exec nautilus
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
 
 bindsym $mod+t exec --no-startup-id pkill compton
@@ -259,8 +254,7 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 # exec --no-startup-id blueman-applet
-# exec --no-startup-id start_conky_maia
-exec --no-startup-id start_conky_green
+exec --no-startup-id /home/hoagie/.i3/start_conky.sh
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
@@ -296,6 +290,8 @@ mode "$mode_monitor" {
 bindsym $mod+o exec --no-startup-id /home/hoagie/.i3/audio_output.py
 # I can configure a udev rule, or change to xkb, or...just this:
 bindsym $mod+i exec --no-startup-id xmodmap /home/hoagie/.Xmodmap
+
+bindsym $mod+n exec --no-startup-id dunstctl context
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
