--- a/.config/xfce4/panel/launcher-18/157846256413.desktop
+++ b/.config/xfce4/panel/launcher-18/157846256413.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Volume UP
 Comment=
 Exec=xdotool key XF86AudioRaiseVolume
-Icon=audio-volume-high
+Icon=/home/hoagie/.config/i3/feather_icons/volume-2.svg
 Path=
 Terminal=false
 StartupNotify=false
