--- a/.config/xfce4/panel/launcher-7/15890468041.desktop
+++ b/.config/xfce4/panel/launcher-7/15890468041.desktop
@@ -7,7 +7,7 @@ Terminal=false
 Type=Application
 Categories=Utility;Accessibility;
 MimeType=application/x-onboard;
-Icon=/home/hoagie/.i3/feather_icons/type.svg
+Icon=/home/hoagie/.config/i3/feather_icons/type.svg
 X-Ubuntu-Gettext-Domain=onboard
 X-XFCE-Source=file:///usr/share/applications/onboard.desktop
 Path=
