--- a/.config/xfce4/panel/launcher-2/15785403391.desktop
+++ b/.config/xfce4/panel/launcher-2/15785403391.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Suspend
 Comment=
 Exec=i3exit suspend
-Icon=/home/hoagie/.i3/feather_icons/moon.svg
+Icon=/home/hoagie/.config/i3/feather_icons/moon.svg
 Path=
 Terminal=false
 StartupNotify=false
