--- a/.config/xfce4/panel/launcher-20/15795831951.desktop
+++ b/.config/xfce4/panel/launcher-20/15795831951.desktop
@@ -5,7 +5,7 @@ Name=CellWriter
 GenericName=Handwriting input panel
 Comment=Grid-entry handwriting recognition input panel
 Exec=cellwriter
-Icon=/home/hoagie/.i3/feather_icons/edit-2.svg
+Icon=/home/hoagie/.config/i3/feather_icons/edit-2.svg
 StartupNotify=true
 Terminal=false
 Type=Application
