--- a/.config/xfce4/panel/launcher-33/15784631701.desktop
+++ b/.config/xfce4/panel/launcher-33/15784631701.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Brightness UP
 Comment=
 Exec=xdotool key XF86MonBrightnessUp
-Icon=/home/hoagie/.i3/feather_icons/sun.svg
+Icon=/home/hoagie/.config/i3/feather_icons/sunrise.svg
 Path=
 Terminal=false
 StartupNotify=false
