Correct scripts location in panel buttons

--- a/.config/xfce4/panel/launcher-40/15860285374.desktop
+++ b/.config/xfce4/panel/launcher-40/15860285374.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=next ws   >
 Comment=
-Exec=/home/hoagie/.i3/go_to_workspace.py next
+Exec=/home/hoagie/.config/i3/go_to_workspace.py next
 Icon=/home/hoagie/.config/i3/feather_icons/arrow-right.svg
 Path=
 Terminal=false
