--- a/.dmenurc
+++ b/.dmenurc
@@ -6,16 +6,16 @@
 DMENU_FN="Consolas-12"
 
 ## background colour for unselected menu-items
-DMENU_NB="#fafafa"
+DMENU_NB="#F5F5F9"
 
 ## textcolour for unselected menu-items
-DMENU_NF="#3b2685"
+DMENU_NF="#0F1019"
 
 ## background colour for selected menu-items
-DMENU_SB="#009c9f"
+DMENU_SB="#E9E9F2"
 
 ## textcolour for selected menu-items
-DMENU_SF="#fafafa"
+DMENU_SF="#D83441"
 
 ## command for the terminal application to be used:
 TERMINAL_CMD="terminal -e"
